gitops/evaluation-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: app-evaluation-service
  name: app-evaluation-service
  namespace: evaluation-service
spec:
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 0
  replicas: 1
  selector:
    matchLabels:
      app: app-evaluation-service
  template:
    metadata:
      labels:
        app: app-evaluation-service
    spec:
      containers:
        - name: app-evaluation-service 
          image: 903947067217.dkr.ecr.us-east-1.amazonaws.com/togglemaster_evaluation-service:v1.0.0-53e7bc2
          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          startupProbe:
            httpGet:
              path: /health
              port: 8004
            failureThreshold: 180   # 180 * 1s = 3 minutos
            periodSeconds: 1
          livenessProbe:
            httpGet:
              path: /health
              port: 8004
            initialDelaySeconds: 15
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8004
            initialDelaySeconds: 5
            periodSeconds: 5
